--- a/youtube/index.html
+++ b/youtube/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  </head>
     <script type="text/javascript" src="controllers.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
   <body ng-controller="YoutubeSearch">
     <div class="container">
       <div class="row">
@@ -22,9 +23,11 @@
     </div>
     <hr>
     <div class="container">
-      <div class="row" ng-repeat="result in results.feed.entry">
+      <div class="row row-space" ng-repeat="result in results.feed.entry">
         <div>
-          <h4>{{ result.title.$t }}</h4>
+          <a ng-href="{{ result.link[0].href }}">
+            <h4>{{ result.title.$t }}</h4>
+          </a>
         </div>
         <div class="col-md-2">
           <a ng-href="{{ result.media$group.media$player[0].url }}">
