ページ読み込み時に「AngularJS」でキーワード検索するようにしました。

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -7,9 +7,10 @@
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  </head>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
     <link rel="stylesheet" href="../css/main.css">
+   </head>
   <body ng-controller="YoutubeSearch">
     <div class="container">
       <div class="row">
